关于大数据框架的项目学习

--- a/csw-project-ct/pom.xml
+++ b/csw-project-ct/pom.xml
@@ -13,6 +13,7 @@
         <module>ct-producer</module>
         <module>ct-consumer</module>
         <module>ct-analysis</module>
+        <module>ct-cache</module>
     </modules>
 
 
