--- a/csw-project-ct/ct-cache/pom.xml
+++ b/csw-project-ct/ct-cache/pom.xml
@@ -11,5 +11,22 @@
 
     <artifactId>ct-cache</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.46</version>
+        </dependency>
+        <dependency>
+            <groupId>csw</groupId>
+            <artifactId>ct-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
